--- a/run/agent_config.json
+++ b/run/agent_config.json
@@ -286,19 +286,6 @@
               },
               {
                 "test": {},
-                "exclude": {},
-                "enforce": "pre",
-                "use": [
-                  {
-                    "loader": "tslint-loader",
-                    "options": {
-                      "fix": true
-                    }
-                  }
-                ]
-              },
-              {
-                "test": {},
                 "use": [
                   "/Users/jianghui/Code/my_code/whisky-app/node_modules/_mini-css-extract-plugin@0.8.2@mini-css-extract-plugin/dist/loader.js",
                   {
@@ -364,12 +351,7 @@
                   {
                     "options": {
                       "sourceMap": true,
-                      "javascriptEnabled": true,
-                      "modifyVars": {
-                        "primary-color": "red",
-                        "link-color": "#1DA57A",
-                        "border-radius-base": "2px"
-                      }
+                      "javascriptEnabled": true
                     },
                     "loader": "less-loader"
                   }
@@ -446,7 +428,7 @@
                 ]
               },
               {
-                "test": "~config~webpack~webpackConfigList~0~module~rules~3~exclude~0",
+                "test": "~config~webpack~webpackConfigList~0~module~rules~2~exclude~0",
                 "use": [
                   "/Users/jianghui/Code/my_code/whisky-app/node_modules/_mini-css-extract-plugin@0.8.2@mini-css-extract-plugin/dist/loader.js",
                   {
@@ -462,6 +444,35 @@
                     "options": {
                       "sourceMap": true
                     }
+                  }
+                ],
+                "include": [
+                  "~config~webpack~webpackConfigList~0~module~rules~2~exclude~0"
+                ]
+              },
+              {
+                "test": "~config~webpack~webpackConfigList~0~module~rules~3~exclude~0",
+                "use": [
+                  "/Users/jianghui/Code/my_code/whisky-app/node_modules/_mini-css-extract-plugin@0.8.2@mini-css-extract-plugin/dist/loader.js",
+                  {
+                    "options": {
+                      "sourceMap": true,
+                      "modules": true,
+                      "importLoaders": 2
+                    },
+                    "loader": "css-loader"
+                  },
+                  {
+                    "loader": "postcss-loader",
+                    "options": {
+                      "sourceMap": true
+                    }
+                  },
+                  {
+                    "options": {
+                      "sourceMap": true
+                    },
+                    "loader": "sass-loader"
                   }
                 ],
                 "include": [
@@ -490,7 +501,7 @@
                     "options": {
                       "sourceMap": true
                     },
-                    "loader": "sass-loader"
+                    "loader": "less-loader"
                   }
                 ],
                 "include": [
@@ -519,40 +530,11 @@
                     "options": {
                       "sourceMap": true
                     },
-                    "loader": "less-loader"
-                  }
-                ],
-                "include": [
-                  "~config~webpack~webpackConfigList~0~module~rules~5~exclude~0"
-                ]
-              },
-              {
-                "test": "~config~webpack~webpackConfigList~0~module~rules~6~exclude~0",
-                "use": [
-                  "/Users/jianghui/Code/my_code/whisky-app/node_modules/_mini-css-extract-plugin@0.8.2@mini-css-extract-plugin/dist/loader.js",
-                  {
-                    "options": {
-                      "sourceMap": true,
-                      "modules": true,
-                      "importLoaders": 2
-                    },
-                    "loader": "css-loader"
-                  },
-                  {
-                    "loader": "postcss-loader",
-                    "options": {
-                      "sourceMap": true
-                    }
-                  },
-                  {
-                    "options": {
-                      "sourceMap": true
-                    },
                     "loader": "stylus-loader"
                   }
                 ],
                 "include": [
-                  "~config~webpack~webpackConfigList~0~module~rules~6~exclude~0"
+                  "~config~webpack~webpackConfigList~0~module~rules~5~exclude~0"
                 ]
               }
             ]
@@ -786,19 +768,6 @@
               },
               {
                 "test": {},
-                "exclude": {},
-                "enforce": "pre",
-                "use": [
-                  {
-                    "loader": "tslint-loader",
-                    "options": {
-                      "fix": true
-                    }
-                  }
-                ]
-              },
-              {
-                "test": {},
                 "use": [
                   {
                     "loader": "isomorphic-style-loader"
@@ -819,7 +788,7 @@
               {
                 "test": {},
                 "use": [
-                  "~config~webpack~webpackConfigList~1~module~rules~3~use~0",
+                  "~config~webpack~webpackConfigList~1~module~rules~2~use~0",
                   {
                     "loader": "css-loader",
                     "options": {}
@@ -840,7 +809,7 @@
               {
                 "test": {},
                 "use": [
-                  "~config~webpack~webpackConfigList~1~module~rules~3~use~0",
+                  "~config~webpack~webpackConfigList~1~module~rules~2~use~0",
                   {
                     "loader": "css-loader",
                     "options": {}
@@ -852,12 +821,7 @@
                   {
                     "loader": "less-loader",
                     "options": {
-                      "javascriptEnabled": true,
-                      "modifyVars": {
-                        "primary-color": "red",
-                        "link-color": "#1DA57A",
-                        "border-radius-base": "2px"
-                      }
+                      "javascriptEnabled": true
                     }
                   }
                 ],
@@ -872,7 +836,7 @@
               {
                 "test": {},
                 "use": [
-                  "~config~webpack~webpackConfigList~1~module~rules~3~use~0",
+                  "~config~webpack~webpackConfigList~1~module~rules~2~use~0",
                   {
                     "loader": "css-loader",
                     "options": {}
@@ -927,7 +891,7 @@
                 ]
               },
               {
-                "test": "~config~webpack~webpackConfigList~1~module~rules~3~exclude~0",
+                "test": "~config~webpack~webpackConfigList~1~module~rules~2~exclude~0",
                 "use": [
                   {
                     "loader": "isomorphic-style-loader",
@@ -942,6 +906,33 @@
                   },
                   {
                     "loader": "postcss-loader",
+                    "options": {}
+                  }
+                ],
+                "include": [
+                  "~config~webpack~webpackConfigList~1~module~rules~2~exclude~0"
+                ]
+              },
+              {
+                "test": "~config~webpack~webpackConfigList~1~module~rules~3~exclude~0",
+                "use": [
+                  {
+                    "loader": "isomorphic-style-loader",
+                    "options": {}
+                  },
+                  {
+                    "loader": "css-loader",
+                    "options": {
+                      "modules": true,
+                      "importLoaders": 2
+                    }
+                  },
+                  {
+                    "loader": "postcss-loader",
+                    "options": {}
+                  },
+                  {
+                    "loader": "sass-loader",
                     "options": {}
                   }
                 ],
@@ -968,7 +959,7 @@
                     "options": {}
                   },
                   {
-                    "loader": "sass-loader",
+                    "loader": "less-loader",
                     "options": {}
                   }
                 ],
@@ -995,39 +986,12 @@
                     "options": {}
                   },
                   {
-                    "loader": "less-loader",
-                    "options": {}
-                  }
-                ],
-                "include": [
-                  "~config~webpack~webpackConfigList~1~module~rules~5~exclude~0"
-                ]
-              },
-              {
-                "test": "~config~webpack~webpackConfigList~1~module~rules~6~exclude~0",
-                "use": [
-                  {
-                    "loader": "isomorphic-style-loader",
-                    "options": {}
-                  },
-                  {
-                    "loader": "css-loader",
-                    "options": {
-                      "modules": true,
-                      "importLoaders": 2
-                    }
-                  },
-                  {
-                    "loader": "postcss-loader",
-                    "options": {}
-                  },
-                  {
                     "loader": "stylus-loader",
                     "options": {}
                   }
                 ],
                 "include": [
-                  "~config~webpack~webpackConfigList~1~module~rules~6~exclude~0"
+                  "~config~webpack~webpackConfigList~1~module~rules~5~exclude~0"
                 ]
               }
             ]
@@ -1167,8 +1131,8 @@
       "devDependencies": {
         "@easy-team/res-cli": "^2.0.0",
         "babel-plugin-import": "^1.13.0",
-        "less": "^3.11.1",
-        "less-loader": "^6.1.0"
+        "less": "^2.7.2",
+        "less-loader": "^4.0.5"
       },
       "egg": {
         "typescript": true
