--- a/run/application_config.json
+++ b/run/application_config.json
@@ -111,9 +111,10 @@
         "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-webpack@4.5.3@egg-webpack/config/locales",
         "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-webpack-react@3.0.0@egg-webpack-react/config/locales",
         "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-mysql@3.0.0@egg-mysql/config/locales",
-        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-passport@2.1.1@egg-passport/config/locales",
-        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-passport-local@1.2.1@egg-passport-local/config/locales",
-        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/locales",
+        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-jwt@3.1.7@egg-jwt/config/locales",
+        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-redis@2.4.0@egg-redis/config/locales",
+        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-sequelize@5.2.1@egg-sequelize/config/locales",
+        "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/locales",
         "/Users/jianghui/Code/my_code/whisky-app/node_modules/_@easy-team_res@2.0.1@@easy-team/res/config/locales",
         "/Users/jianghui/Code/my_code/whisky-app/config/locales"
       ],
@@ -1118,10 +1119,34 @@
         "database": "whisky"
       }
     },
-    "passportLocal": {
-      "usernameField": "username",
-      "passwordField": "password",
-      "passReqToCallback": true
+    "jwt": {
+      "secret": "<String len: 6>",
+      "enable": true,
+      "ignore": [
+        "/",
+        "/api/blog/login/",
+        "/public/"
+      ]
+    },
+    "redis": {
+      "default": {},
+      "app": true,
+      "agent": false,
+      "supportTimeCommand": true,
+      "user": {
+        "port": 6379,
+        "host": "127.0.0.1",
+        "password": "<String len: 0>",
+        "db": 0
+      }
+    },
+    "sequelize": {
+      "dialect": "mysql",
+      "database": "whisky",
+      "host": "127.0.0.1",
+      "port": 3306,
+      "username": "root",
+      "password": "<String len: 8>"
     },
     "env": "local",
     "name": "whisky-app",
@@ -1149,18 +1174,17 @@
       },
       "dependencies": {
         "@easy-team/res": "^2.0.0",
-        "@hubcarl/json-typescript-mapper": "2.0.0",
         "antd": "^4.2.2",
         "axios": "^0.19.2",
+        "egg-jwt": "^3.1.7",
         "egg-mysql": "^3.0.0",
-        "egg-passport": "^2.1.1",
-        "egg-passport-local": "^1.2.1",
+        "egg-redis": "^2.4.0",
+        "egg-sequelize": "^5.2.1",
+        "js-cookie": "^2.2.1",
         "lodash": "^4.17.4",
         "lodash-id": "^0.14.0",
-        "lowdb": "^1.0.0",
-        "mobx": "^5.15.3",
-        "mobx-react": "^6.1.4",
         "moment": "^2.17.1",
+        "mysql2": "^2.1.0",
         "react-loadable": "^5.5.0",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
@@ -1168,14 +1192,15 @@
         "react-router-dom": "^4.2.2",
         "react-router-redux": "^4.0.8",
         "redux": "^3.7.2",
-        "shortid": "^2.2.8",
-        "showdown": "^1.8.6"
+        "shortid": "^2.2.8"
       },
       "devDependencies": {
         "@easy-team/res-cli": "^2.0.0",
+        "@types/shortid": "^0.0.29",
         "babel-plugin-import": "^1.13.0",
         "less": "^2.7.2",
-        "less-loader": "^4.0.5"
+        "less-loader": "^4.0.5",
+        "sequelize-cli": "^5.5.1"
       },
       "egg": {
         "typescript": true
@@ -1186,13 +1211,8 @@
       "ci": {
         "version": "8, 10, 12"
       },
-      "repository": {
-        "type": "git",
-        "url": "git+https://github.com/easy-team/egg-react-typescript-boilerplate.git"
-      },
-      "author": "hubcarl@126.com",
+      "author": "noonehide@163.com",
       "license": "MIT",
-      "homepage": "https://github.com/easy-team/egg-react-typescript-boilerplate",
       "webpack": {
         "loaders": {}
       }
@@ -1285,8 +1305,6 @@
       "securities",
       "i18n",
       "eggLoaderTrace",
-      "passportInitialize",
-      "passportSession",
       "locals"
     ],
     "workerStartTimeout": 600000,
@@ -1307,6 +1325,7 @@
       "key": "whisky-app_123456"
     },
     "middleware": [
+      "jwt",
       "local"
     ],
     "coreMiddlewares": "~config~coreMiddleware",
@@ -1333,7 +1352,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-session@3.2.0@egg-session",
       "version": "3.2.0"
     },
@@ -1346,7 +1365,7 @@
         "session"
       ],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-security@2.8.0@egg-security",
       "version": "2.8.0"
     },
@@ -1359,7 +1378,7 @@
         "security"
       ],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-jsonp@2.0.0@egg-jsonp",
       "version": "2.0.0"
     },
@@ -1372,7 +1391,7 @@
         "jsonp"
       ],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-onerror@2.1.0@egg-onerror",
       "version": "2.1.0"
     },
@@ -1383,7 +1402,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-i18n@2.1.1@egg-i18n",
       "version": "2.1.1"
     },
@@ -1394,7 +1413,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-watcher@3.1.1@egg-watcher",
       "version": "3.1.1"
     },
@@ -1405,7 +1424,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-schedule@3.6.4@egg-schedule",
       "version": "3.6.4"
     },
@@ -1418,7 +1437,7 @@
         "schedule"
       ],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-multipart@2.10.3@egg-multipart",
       "version": "2.10.3"
     },
@@ -1433,7 +1452,7 @@
       "env": [
         "local"
       ],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-development@2.4.3@egg-development",
       "version": "2.4.3"
     },
@@ -1446,7 +1465,7 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-logrotator@3.1.0@egg-logrotator",
       "version": "3.1.0"
     },
@@ -1457,7 +1476,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-static@2.2.0@egg-static",
       "version": "2.2.0"
     },
@@ -1468,7 +1487,7 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.0@egg/config/plugin.js",
+      "from": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg@2.26.1@egg/config/plugin.js",
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-view@2.1.2@egg-view",
       "version": "2.1.2"
     },
@@ -1545,31 +1564,40 @@
       "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-mysql@3.0.0@egg-mysql",
       "version": "3.0.0"
     },
-    "passport": {
+    "jwt": {
       "enable": true,
-      "package": "egg-passport",
-      "name": "passport",
-      "dependencies": [
-        "session"
+      "package": "egg-jwt",
+      "name": "jwt",
+      "dependencies": [],
+      "optionalDependencies": [
+        "onerror"
       ],
-      "optionalDependencies": [],
       "env": [],
       "from": "/Users/jianghui/Code/my_code/whisky-app/config/plugin.ts",
-      "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-passport@2.1.1@egg-passport",
-      "version": "2.1.1"
+      "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-jwt@3.1.7@egg-jwt",
+      "version": "3.1.7"
     },
-    "passportLocal": {
+    "redis": {
       "enable": true,
-      "package": "egg-passport-local",
-      "name": "passportLocal",
-      "dependencies": [
-        "passport"
-      ],
+      "package": "egg-redis",
+      "name": "redis",
+      "dependencies": [],
       "optionalDependencies": [],
       "env": [],
       "from": "/Users/jianghui/Code/my_code/whisky-app/config/plugin.ts",
-      "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-passport-local@1.2.1@egg-passport-local",
-      "version": "1.2.1"
+      "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-redis@2.4.0@egg-redis",
+      "version": "2.4.0"
+    },
+    "sequelize": {
+      "enable": true,
+      "package": "egg-sequelize",
+      "name": "sequelize",
+      "dependencies": [],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "/Users/jianghui/Code/my_code/whisky-app/config/plugin.ts",
+      "path": "/Users/jianghui/Code/my_code/whisky-app/node_modules/_egg-sequelize@5.2.1@egg-sequelize",
+      "version": "5.2.1"
     }
   }
 }
